2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: when storing values, if the value is null store an empty
	  string instead

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-10-05  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Made BaseDirectory internal 

2007-10-02  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Exposing the usb device and bus numbers to make it easier
	  to identify the device explicitly.

2007-10-01  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added a setter for Rating

2007-10-01  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Always return a non-null list even if no cameras are found

2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: bugfix: I need to set disposed = true *after* i disconnect
	  from the device.

2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Cosmetic fixes (spaces VS tabs)

2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added in helper properties to reveal more information

2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Updated the mimetype usage a bit
	* src/FileSystem.cs: Added in methods which count how many files there are
	  in a folder
	* src/Camera.cs: Expose a List<FileSystem> rather than FileSystem[]. Same
	  for the Camera[]
	* src/Files/PlaylistFile.cs, src/Makefile.am, libgphoto2-sharp.mdp: Added
	  PlaylistFile class

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Stripping out the 'BaseDirectory' correctly when
	  reading files from the camera.

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Fixed bug in DeleteFile(string, string). Also minor
	  cosmetic changes for other methods

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Fixed bug in DeleteFile(string, string). Also minor
	  cosmetic changes for other methods
